--- a/_quarto.yml
+++ b/_quarto.yml
@@ -14,18 +14,12 @@ website:
         text: Home
       - text: "Journal"
         menu: 
-          - text: "01 Tidyverse"
-            file: content/01_journal/01_tidyverse.qmd
-          - text: "02 Data Acquisition"
-            file: content/01_journal/02_data_acquisition.qmd
-          - text: "03 Data Wrangling"
-            file: content/01_journal/03_data_wrangling.qmd
-          - text: "04 Data Visualization"
-            file: content/01_journal/04_data_visualization.qmd
-      - text: "Class notes"
-        file: content/02_notes/05_class_notes.qmd
-      - text: "Links"
-        file: content/03_other/06_links.qmd
+          - text: "01 Reporting Tools"
+            file: content/01_journal/01_reporting_tools.qmd
+          - text: "02 Stock Analyzer"
+            file: content/01_journal/02_stock_analyzer.qmd
+          - text: "03 Data-Driven Decision Making for Business"
+            file: content/01_journal/03_data-driven_decision_making.qmd
 
 format:
   html:
